# release-tutorial

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.md  installation.md
docs/tutorials/: getting-started.ipynb
src/release_tutorial/: __init__.py
tests/: test_release_tutorial.py
